--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,13 +1,7 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
 
 .heroBanner {
-  padding: 4rem 0;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 996px) {
@@ -21,3 +15,4 @@
   align-items: center;
   justify-content: center;
 }
+
