--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -40,6 +40,14 @@
   font-family: sans-serif;
   font-size: calc(5px + 2vmin) !important;
   margin-top: 1.5rem !important;
+  font-style: normal;
+}
+.textSubTitle2{
+  font-weight: bold;
+  color: #2e8555;
+  font-family: sans-serif;
+  font-size: calc(5px + 2vmin) !important;
+  margin-top: 1.5rem !important;
   line-height: 4.2;
   font-style: normal;
 }
