--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -6,14 +6,22 @@
 }
 .textoCentro {
   margin-top: 1.5rem !important;
-  margin-bottom: 1.5rem !important;
   line-height: 1.2;
   font-style: normal;
   padding: 0px;
 }
+.mRow{
+  margin-right: 1px;
+}
 .featureSvg {
   height: 200px;
   width: 200px;
+}
+.noPadding {
+  padding: 20px;
+}
+.ml10 {
+  margin-right: 10px;
 }
 .appLogo {
   height: 10vmin;
