--- a/src/components/HomepageHeader/styles.module.css
+++ b/src/components/HomepageHeader/styles.module.css
@@ -29,7 +29,7 @@
 }
  .textoCentro {
   margin-top: 1.5rem !important;
-  line-height: 1.2;
+  line-height: 2.2;
   font-style: normal;
 }
 
@@ -56,4 +56,7 @@
 }
 .appHeaderItens {
   margin: 20px;
+}
+.heroBackground{
+  background-image:url("https://i.pinimg.com/originals/d2/36/dc/d236dc20a4a3c669c3a23358aa926cc7.jpg")
 }
